--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,26 @@ stages:
         Dockerfile: '**/Dockerfile'
         tags: |
           $(tag)
+- stage: Provision
+  displayName: Terraforming on azure
+  dependsOn: Build
+  jobs:
+  - job: Provision
+    displayName: Provisioning Container instance
+    pool:
+      vmImage: 'ubuntu-latest'
+    variables:
+      - group: terraform_env_vars
+    steps:
+    - script: |
+        set -e
+
+        terraform init -input=false
+        terraform apply -input=false -auto-approve
+      name: 'RunTerraform'
+      displaName: "Run Terraform"
+      env:
+        ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+        ARM_TENANT_ID: $(ARM_TENANT_ID)
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
