--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
         terraform init -input=false
         terraform apply -input=false -auto-approve
       name: 'RunTerraform'
-      displaName: "Run Terraform"
+      displayName: "Run Terraform"
       env:
         ARM_CLIENT_ID: $(ARM_CLIENT_ID)
         ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
